<resources>
    <string name="app_name">CashFlow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_savings">Savings</string>
    <string name="menu_expense">Expense</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- Welcome Walkthrough -->
    <string name="welcome_one_heading">Automatic Cash Growth</string>
    <string name="welcome_one_subtext">Save money with us and watch \nyour money grow</string>
    <string name="welcome_two_heading">Think Cash</string>
    <string name="welcome_two_subtext">We are careful about trends \narising in money</string>
    <string name="welcome_three_heading">Investment</string>
    <string name="welcome_three_subtext">Allocate money to expect increase in \nmoney in future</string>

    <string name="next_text">Next &gt;</string>
    <string name="previous_text"> &lt; Previous</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_back_btn">Back</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="signin_image">Sigin Image</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_nothing">Nothing</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="enter_amount">Enter amount</string>
    <string name="logout">Logout</string>
    <string name="savings_account">Savings Account</string>

    <string name="select_savings_account_message">No Active Savings Account</string>
    <string name="select_savings_account_title">Select Savings Account</string>
    <string name="reload_savings">Reload Savings</string>
</resources>
